Fix build issues